--- a/style.css
+++ b/style.css
@@ -1,13 +1,52 @@
 body {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: beige;
+}
+
+.grid-border {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 25px;
+    width: 900px;
+    height: 600px;
+    background-color: red;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.title {
+    display: flex;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 40px;
+    font-weight: 900;
+    color: antiquewhite;
 }
 
 .grid-container {
-    border: 2px solid black;
-    width: 960px;
-    height: 500px;
+    border: 1px solid black; 
+    background-color: antiquewhite;
     display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 700px;
+    height: 400px;
+}
+
+.row {
+    border: black 0.1px solid;
+    display: flex;
+    flex: 1;
+    
+}
+
+.box {
+    border: black 0.1px solid;
+    flex: 1;
+    height: 100%;
 }
