--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
     background-color: beige;
 }
 
+/* a {
+    display: flex;
+    flex: auto;
+    height: 10px;
+    width: 10px;
+} */
+
 .grid-border {
     display: flex;
     justify-content: center;
