Add inputs and new grid button to index.html

--- a/style.css
+++ b/style.css
@@ -6,12 +6,9 @@ body {
     background-color: beige;
 }
 
-/* a {
-    display: flex;
-    flex: auto;
-    height: 10px;
-    width: 10px;
-} */
+input {
+    width: 40px;
+}
 
 .grid-border {
     display: flex;
