Create row and col input functionality

--- a/style.css
+++ b/style.css
@@ -32,6 +32,10 @@ input {
     color: antiquewhite;
 }
 
+.tools {
+    display: flex;
+}
+
 .grid-container {
     border: 1px solid black; 
     background-color: antiquewhite;
