--- a/style.css
+++ b/style.css
@@ -8,6 +8,13 @@ body {
 
 input {
     width: 40px;
+    border-radius: 5px;
+    background-color: antiquewhite;
+}
+
+button {
+    border-radius: 5px;
+    background-color: antiquewhite;
 }
 
 .grid-border {
@@ -29,11 +36,12 @@ input {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 40px;
     font-weight: 900;
-    color: antiquewhite;
+    color: gold;
 }
 
 .tools {
     display: flex;
+    gap: 10px;
 }
 
 .grid-container {
